tests/ui/cilk/cilk_spawn_break.stderr
error: cannot use `break` within cilk_spawn
  --> $DIR/cilk_spawn_break.rs:10:13
   |
LL |             break;
   |             ^^^^^

error: aborting due to 1 previous error

